backend/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smartorder-backend    
  labels:
    app: smartorder-backend
